--- a/src/index.html
+++ b/src/index.html
@@ -23,11 +23,14 @@
 			</h1>
 		</main>
 		<footer>
-			<a href="https://github.com/andrewgioia" target="blank">
+			<a href="https://github.com/andrewgioia" target="blank" class="github">
                 <i class="icon icon-github"></i>
             </a>
-            <a href="https://gioia.social/@andrew" target="blank">
+            <a href="https://gioia.social/@andrew" target="blank" class="mastodon">
                 <i class="icon icon-mastodon"></i>
+            </a>
+            <a href="mailto:hi@andrewgioia.com" target="blank" class="email">
+                <i class="icon icon-email"></i>
             </a>
 		</footer>
 	</body>
