Dark mode now automatically supported, modularizing the sass files, using css variables now as well, and a new npm watch command

--- a/src/index.html
+++ b/src/index.html
@@ -15,7 +15,7 @@
                     Andrew Gioia,
                 </span>
                 <span class="what">
-                    dad, designer, &amp; co-founder at <a href="https://teachboost.com" target="blank">TeachBoost</a>,
+                    dad, designer, &amp; co-founder at <a href="https://teachboost.com" class="shine" target="blank">TeachBoost</a>,
                 </span>
                 <span class="where">
                     living &amp; tinkering in Pittsburgh.
