--- a/src/index.html
+++ b/src/index.html
@@ -32,6 +32,9 @@
             <a href="mailto:hi@andrewgioia.com" target="blank" class="email">
                 <i class="icon icon-email"></i>
             </a>
+            <a href="https://blog.andrewgioia.com" target="blank" class="blog">
+                <i class="icon icon-rss"></i>
+            </a>
 		</footer>
 	</body>
 </html>
