--- a/src/index.html
+++ b/src/index.html
@@ -26,11 +26,14 @@
 			</h1>
 		</main>
 		<footer>
-			<a href="https://github.com/andrewgioia" target="blank" class="github">
-                <i class="icon icon-github"></i>
-            </a>
             <a href="https://gioia.social/@andrew" target="blank" class="mastodon">
                 <i class="icon icon-mastodon"></i>
+            </a>
+            <a href="https://gioia.photos/andrew" target="blank" class="pixelfed">
+                <i class="icon icon-pixelfed"></i>
+            </a>
+            <a href="https://git.gioia.cloud/andrew" target="blank" class="gitea">
+                <i class="icon icon-gitea"></i>
             </a>
             <a href="mailto:hi@andrewgioia.com" target="blank" class="email">
                 <i class="icon icon-email"></i>
