Updates job title

--- a/src/index.html
+++ b/src/index.html
@@ -18,7 +18,7 @@
                     Andrew Gioia,
                 </span>
                 <span class="what">
-                    dad, designer, &amp; co-founder at <a href="https://teachboost.com" class="shine" target="blank">TeachBoost</a>,
+                    dad, designer, &amp; UI/UX at <a href="https://schoolstatus.com" class="shine" target="blank">SchoolStatus</a>,
                 </span>
                 <span class="where">
                     living &amp; tinkering in Pittsburgh.
