Adds Mastodon link back for verification

--- a/src/index.html
+++ b/src/index.html
@@ -26,13 +26,13 @@
 			</h1>
 		</main>
 		<footer>
-            <a href="https://gioia.social/@andrew" target="blank" class="mastodon">
+            <a href="https://gioia.social/@andrew" target="blank" class="mastodon" rel="me">
                 <i class="icon icon-mastodon"></i>
             </a>
-            <a href="https://gioia.photos/andrew" target="blank" class="pixelfed">
+            <a href="https://gioia.photos/andrew" target="blank" class="pixelfed" rel="me">
                 <i class="icon icon-pixelfed"></i>
             </a>
-            <a href="https://git.gioia.cloud/andrew" target="blank" class="gitea">
+            <a href="https://git.gioia.cloud/andrew" target="blank" class="gitea" rel="me">
                 <i class="icon icon-gitea"></i>
             </a>
             <a href="mailto:hi@andrewgioia.com" target="blank" class="email">
