Accessibility improvements to <html> element and icon links

--- a/src/index.html
+++ b/src/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 	<head>
         <title>Andrew Gioia</title>
         <meta charset="utf-8">
@@ -27,19 +27,19 @@
 		</main>
 		<footer>
             <a href="https://gioia.social/@andrew" target="blank" class="mastodon" rel="me">
-                <i class="icon icon-mastodon"></i>
+                <i class="icon icon-mastodon" title="@andrew@gioia.social on Mastodon"></i>
             </a>
             <a href="https://gioia.photos/andrew" target="blank" class="pixelfed" rel="me">
-                <i class="icon icon-pixelfed"></i>
+                <i class="icon icon-pixelfed" title="@andrew@gioia.photos on Pixelfed"></i>
             </a>
             <a href="https://git.gioia.cloud/andrew" target="blank" class="gitea" rel="me">
-                <i class="icon icon-gitea"></i>
+                <i class="icon icon-gitea" title="@andrew on git.gioia.cloud Gitea instance"></i>
             </a>
             <a href="mailto:hi@andrewgioia.com" target="blank" class="email">
-                <i class="icon icon-email"></i>
+                <i class="icon icon-email" title="Email me at andrew@andrewgioia.com"></i>
             </a>
             <a href="https://blog.andrewgioia.com" target="blank" class="blog">
-                <i class="icon icon-rss"></i>
+                <i class="icon icon-rss" title="Thoughts and longer posts on my blog"></i>
             </a>
 		</footer>
 	</body>
